@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
  */
 package io.cloudbeaver.server;
 
+import graphql.execution.instrumentation.Instrumentation;
 import io.cloudbeaver.WebServiceUtils;
 import io.cloudbeaver.auth.NoAuthCredentialsProvider;
 import io.cloudbeaver.model.CBWebServerConfig;
@@ -24,16 +25,18 @@ import io.cloudbeaver.model.app.BaseServletApplication;
 import io.cloudbeaver.model.app.ServletAuthApplication;
 import io.cloudbeaver.model.app.ServletAuthConfiguration;
 import io.cloudbeaver.model.app.ServletSystemInformationCollector;
+import io.cloudbeaver.model.cli.CloudBeaverInstanceServer;
 import io.cloudbeaver.model.config.CBAppConfig;
 import io.cloudbeaver.model.config.CBServerConfig;
 import io.cloudbeaver.registry.WebDriverRegistry;
 import io.cloudbeaver.registry.WebServiceRegistry;
+import io.cloudbeaver.server.graphql.GraphQLEndpoint;
 import io.cloudbeaver.server.jetty.CBJettyServer;
-import io.cloudbeaver.service.ConnectionController;
-import io.cloudbeaver.service.ConnectionControllerCE;
 import io.cloudbeaver.service.DBWServiceInitializer;
 import io.cloudbeaver.service.DBWServiceServerConfigurator;
+import io.cloudbeaver.service.security.CBEmbeddedSecurityController;
 import io.cloudbeaver.service.session.CBSessionManager;
+import io.cloudbeaver.utils.ServletAppUtils;
 import io.cloudbeaver.utils.WebDataSourceUtils;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.osgi.service.datalocation.Location;
@@ -44,15 +47,14 @@ import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBConstants;
 import org.jkiss.dbeaver.model.DBPDataSourceContainer;
 import org.jkiss.dbeaver.model.app.DBPPlatform;
-import org.jkiss.dbeaver.model.auth.AuthInfo;
+import org.jkiss.dbeaver.model.auth.SMAuthConfiguration;
 import org.jkiss.dbeaver.model.auth.SMCredentialsProvider;
+import org.jkiss.dbeaver.model.auth.SMObjectType;
 import org.jkiss.dbeaver.model.connection.DBPDriver;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
 import org.jkiss.dbeaver.model.impl.app.BaseApplicationImpl;
-import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.security.SMAdminController;
 import org.jkiss.dbeaver.model.security.SMConstants;
-import org.jkiss.dbeaver.model.security.SMObjectType;
 import org.jkiss.dbeaver.model.websocket.event.WSEventController;
 import org.jkiss.dbeaver.model.websocket.event.WSServerConfigurationChangedEvent;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
@@ -87,7 +89,6 @@ public abstract class CBApplication<T extends CBServerConfig>
      */
     private static final long CONFIGURATION_MODE_SESSION_IDLE_TIME = 60 * 60 * 1000 * 24 * 7;
 
-
     static {
         Log.setDefaultDebugStream(System.out);
     }
@@ -102,7 +103,6 @@ public abstract class CBApplication<T extends CBServerConfig>
     // Persistence
     protected SMAdminController securityController;
     private boolean configurationMode = false;
-    private String localHostAddress;
     protected String containerId;
     private final List<InetAddress> localInetAddresses = new ArrayList<>();
 
@@ -115,12 +115,10 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     private CBJettyServer jettyServer;
 
+    private final Map<String, Object> applicationContext = new ConcurrentHashMap<>();
+
     public CBApplication() {
         this.homeDirectory = new File(initHomeFolder());
-    }
-
-    public String getServerURL() {
-        return getServerConfiguration().getServerURL();
     }
 
     // Port this server listens on. If set the 0 a random port is assigned which may be obtained with getLocalPort()
@@ -138,15 +136,18 @@ public abstract class CBApplication<T extends CBServerConfig>
         return getServerConfiguration().getServerName();
     }
 
+    @NotNull
     public String getRootURI() {
         return getServerConfiguration().getRootURI();
     }
 
+    @NotNull
     public String getServicesURI() {
         return getServerConfiguration().getServicesURI();
     }
 
 
+    @NotNull
     public Path getHomeDirectory() {
         return homeDirectory.toPath();
     }
@@ -170,14 +171,17 @@ public abstract class CBApplication<T extends CBServerConfig>
      * @return max session idle time from server configuration, may differ from {@link #getMaxSessionIdleTime()}
      */
 
+    @NotNull
     public CBAppConfig getAppConfiguration() {
         return getServerConfigurationController().getAppConfiguration();
     }
 
+    @NotNull
     public T getServerConfiguration() {
         return getServerConfigurationController().getServerConfiguration();
     }
 
+    @NotNull
     @Override
     public ServletAuthConfiguration getAuthConfiguration() {
         return getAppConfiguration();
@@ -200,6 +204,11 @@ public abstract class CBApplication<T extends CBServerConfig>
     @Override
     protected void startServer() {
         try {
+            createInstanceServer();
+        } catch (Exception e) {
+            log.error("Error initializing instance server", e);
+        }
+        try {
             if (!loadServerConfiguration()) {
                 return;
             }
@@ -214,31 +223,17 @@ public abstract class CBApplication<T extends CBServerConfig>
 
         configurationMode = CommonUtils.isEmpty(getServerConfiguration().getServerName());
 
-        refreshDisabledDriversConfig();
-
         eventController.setForceSkipEvents(isConfigurationMode()); // do not send events if configuration mode is on
 
-        // Determine address for local host
-        localHostAddress = System.getenv(CBConstants.VAR_CB_LOCAL_HOST_ADDR);
-        if (CommonUtils.isEmpty(localHostAddress)) {
-            localHostAddress = System.getProperty(CBConstants.VAR_CB_LOCAL_HOST_ADDR);
-        }
-        if (CommonUtils.isEmpty(localHostAddress) || CBConstants.HOST_127_0_0_1.equals(localHostAddress) || "::0".equals(
-            localHostAddress)) {
-            localHostAddress = CBConstants.HOST_LOCALHOST;
-        }
 
         Location instanceLoc = Platform.getInstanceLocation();
         try {
             if (!instanceLoc.isSet()) { // always false?
-                URL wsLocationURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    getWorkspaceDirectory().toAbsolutePath().toString());
+                URL wsLocationURL = getWorkspacePath().toUri().toURL();
                 instanceLoc.set(wsLocationURL, true);
             }
         } catch (Exception e) {
-            log.error("Error setting workspace location to " + getWorkspaceDirectory().toAbsolutePath(), e);
+            log.error("Error setting workspace location to " + getWorkspacePath().toAbsolutePath(), e);
             return;
         }
         this.systemInformationCollector = createSystemInformationCollector();
@@ -262,9 +257,6 @@ public abstract class CBApplication<T extends CBServerConfig>
         //log.debug("\tProduct details: " + application.getInfoDetails());
         log.debug("\tListen port: " + getServerPort() + (CommonUtils.isEmpty(getServerHost()) ? " on all interfaces" : " on " + getServerHost()));
         log.debug("\tBase URI: " + getServicesURI());
-        if (!isConfigurationMode()) {
-            log.debug("\tGlobal access server URL: " + getServerConfiguration().getServerURL());
-        }
         if (isDevelMode()) {
             log.debug("\tDevelopment mode");
         } else {
@@ -277,7 +269,8 @@ public abstract class CBApplication<T extends CBServerConfig>
             determineLocalAddresses();
             log.debug("\tLocal host addresses:");
             for (InetAddress ia : localInetAddresses) {
-                log.debug("\t\t" + ia.getHostAddress() + " (" + ia.getCanonicalHostName() + ")");
+                log.debug("\t\t" + ia.getHostAddress() +
+                    (Objects.equals(ia.getHostAddress(), ia.getCanonicalHostName()) ? "" : (" (" + ia.getCanonicalHostName() + ")")));
             }
         }
         {
@@ -296,7 +289,8 @@ public abstract class CBApplication<T extends CBServerConfig>
         try {
             initializeServer();
         } catch (DBException e) {
-            log.error("Error initializing server", e);
+            log.error("Error initializing " + systemInformationCollector.getProductName(), e);
+            shutdown();
             return;
         }
 
@@ -304,6 +298,7 @@ public abstract class CBApplication<T extends CBServerConfig>
             initializeSecurityController();
         } catch (Exception e) {
             log.error("Error initializing database", e);
+            shutdown();
             return;
         }
 
@@ -318,11 +313,6 @@ public abstract class CBApplication<T extends CBServerConfig>
             }
             grantPermissionsToConnections();
         }
-        try {
-            this.systemInformationCollector.collectInternalDatabaseUseInformation();
-        } catch (DBException e) {
-            log.error("Error collecting system information", e);
-        }
 
         eventController.scheduleCheckJob();
 
@@ -331,6 +321,26 @@ public abstract class CBApplication<T extends CBServerConfig>
         log.debug("Shutdown");
     }
 
+    private void refreshServerConfiguration() throws DBException {
+        refreshDisabledDriversConfig();
+        refreshEnabledFeatures();
+        if (!isConfigurationMode()) {
+            flushConfiguration();
+        }
+    }
+
+    private void refreshEnabledFeatures() {
+        Set<String> enabledFeatures = new LinkedHashSet<>(Arrays.asList(getAppConfiguration().getEnabledFeatures()));
+        Set<String> disabledFeatures = new LinkedHashSet<>(Arrays.asList(getAppConfiguration().getDisabledFeatures()));
+
+        ServletAppUtils.getServletApplication().getFeatureRegistry().getWebFeatures().stream()
+            .filter(f -> f.isEnabledByDefault() && !disabledFeatures.contains(f.getId()))
+            .forEach(f -> enabledFeatures.add(f.getId()));
+
+        getAppConfiguration().setEnabledFeatures(enabledFeatures.toArray(new String[0]));
+    }
+
+    @NotNull
     protected ServletSystemInformationCollector<?> createSystemInformationCollector() {
         return new ServletSystemInformationCollector<>(this);
     }
@@ -341,7 +351,6 @@ public abstract class CBApplication<T extends CBServerConfig>
      */
     protected void performAutoConfiguration(Path configPath) {
         String autoServerName = System.getenv(CBConstants.VAR_AUTO_CB_SERVER_NAME);
-        String autoServerURL = System.getenv(CBConstants.VAR_AUTO_CB_SERVER_URL);
         String autoAdminName = System.getenv(CBConstants.VAR_AUTO_CB_ADMIN_NAME);
         String autoAdminPassword = System.getenv(CBConstants.VAR_AUTO_CB_ADMIN_PASSWORD);
 
@@ -356,7 +365,6 @@ public abstract class CBApplication<T extends CBServerConfig>
                         autoProps.load(is);
 
                         autoServerName = autoProps.getProperty(CBConstants.VAR_AUTO_CB_SERVER_NAME);
-                        autoServerURL = autoProps.getProperty(CBConstants.VAR_AUTO_CB_SERVER_URL);
                         autoAdminName = autoProps.getProperty(CBConstants.VAR_AUTO_CB_ADMIN_NAME);
                         autoAdminPassword = autoProps.getProperty(CBConstants.VAR_AUTO_CB_ADMIN_PASSWORD);
                     } catch (IOException e) {
@@ -374,7 +382,6 @@ public abstract class CBApplication<T extends CBServerConfig>
         }
         CBServerConfig serverConfig = new CBServerConfig();
         serverConfig.setServerName(autoServerName);
-        serverConfig.setServerURL(autoServerURL);
         serverConfig.setMaxSessionIdleTime(getMaxSessionIdleTime());
         try {
             finishConfiguration(
@@ -385,12 +392,16 @@ public abstract class CBApplication<T extends CBServerConfig>
                 getAppConfiguration(),
                 null
             );
+            if (!isMultiNode()) {
+                grantPermissionsToConnections();
+            }
         } catch (Exception e) {
             log.error("Error loading server auto configuration", e);
         }
     }
 
     protected void initializeServer() throws DBException {
+        refreshServerConfiguration(); // update features and drivers
         for (DBWServiceServerConfigurator wsc : WebServiceRegistry.getInstance()
             .getWebServices(DBWServiceServerConfigurator.class)) {
             try {
@@ -433,7 +444,7 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     @NotNull
     public Path getDataDirectory(boolean create) {
-        Path dataDir = getWorkspaceDirectory().resolve(CBConstants.RUNTIME_DATA_DIR_NAME);
+        Path dataDir = getWorkspacePath().resolve(CBConstants.RUNTIME_DATA_DIR_NAME);
         if (create && !Files.exists(dataDir)) {
             try {
                 Files.createDirectories(dataDir);
@@ -481,16 +492,27 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     protected void shutdown() {
         log.debug("Cloudbeaver Server is stopping"); //$NON-NLS-1$
+
+        try {
+            if (securityController instanceof CBEmbeddedSecurityController<?> embeddedSecurityController) {
+                embeddedSecurityController.shutdown();
+            }
+        } catch (Exception e) {
+            log.error(e);
+        }
+
+        eventController.scheduleCheckJob();
     }
 
     @Override
-    public String getInfoDetails(DBRProgressMonitor monitor) {
+    public String getInfoDetails() {
         return "";
     }
 
+    @Nullable
     @Override
     public String getDefaultProjectName() {
-        return "GlobalConfiguration";
+        return CBConstants.DEFAULT_CLOUD_PROJECT_NAME;
     }
 
     public boolean isDevelMode() {
@@ -502,9 +524,10 @@ public abstract class CBApplication<T extends CBServerConfig>
     }
 
     public String getLocalHostAddress() {
-        return localHostAddress;
+        return getServerConfigurationController().getLocalHostAddress();
     }
 
+    @NotNull
     public List<InetAddress> getLocalInetAddresses() {
         return localInetAddresses;
     }
@@ -512,7 +535,7 @@ public abstract class CBApplication<T extends CBServerConfig>
     public synchronized void finishConfiguration(
         @NotNull String adminName,
         @Nullable String adminPassword,
-        @NotNull List<AuthInfo> authInfoList,
+        @NotNull List<SMAuthConfiguration> authInfoList,
         @NotNull CBServerConfig serverConfig,
         @NotNull CBAppConfig appConfig,
         @Nullable SMCredentialsProvider credentialsProvider
@@ -569,7 +592,7 @@ public abstract class CBApplication<T extends CBServerConfig>
     protected abstract void finishSecurityServiceConfiguration(
         @NotNull String adminName,
         @Nullable String adminPassword,
-        @NotNull List<AuthInfo> authInfoList
+        @NotNull List<SMAuthConfiguration> authInfoList
     ) throws DBException;
 
     public synchronized void flushConfiguration(SMCredentialsProvider webSession) throws DBException {
@@ -653,6 +676,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return null;
     }
 
+    @NotNull
     public CBSessionManager getSessionManager() {
         if (sessionManager == null) {
             sessionManager = createSessionManager();
@@ -662,6 +686,11 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     protected CBSessionManager createSessionManager() {
         return new CBSessionManager(this);
+    }
+
+    @NotNull
+    public GraphQLEndpoint createGraphQLEndpoint(@NotNull Instrumentation instrumentation) {
+        return new GraphQLEndpoint(instrumentation);
     }
 
     @NotNull
@@ -677,6 +706,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return List.of();
     }
 
+    @NotNull
     @Override
     public WSEventController getEventController() {
         return eventController;
@@ -714,7 +744,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         sendConfigChangedEvent(credentialsProvider);
     }
 
-    protected void sendConfigChangedEvent(SMCredentialsProvider credentialsProvider) {
+    protected void sendConfigChangedEvent(@Nullable SMCredentialsProvider credentialsProvider) {
         String sessionId = null;
         if (credentialsProvider != null && credentialsProvider.getActiveUserCredentials() != null) {
             sessionId = credentialsProvider.getActiveUserCredentials().getSmSessionId();
@@ -722,6 +752,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         eventController.addEvent(new WSServerConfigurationChangedEvent(sessionId, null));
     }
 
+    @NotNull
     @Override
     public abstract CBServerConfigurationController<T> getServerConfigurationController();
 
@@ -758,23 +789,32 @@ public abstract class CBApplication<T extends CBServerConfig>
         initActions.remove(actionId);
     }
 
+    @NotNull
     public Map<String, String> getInitActions() {
         return Map.copyOf(initActions);
     }
 
+    @NotNull
     @Override
     public WebServerConfig getWebServerConfig() {
         return new CBWebServerConfig(this);
     }
 
-    @Override
-    public ConnectionController getConnectionController() {
-        return new ConnectionControllerCE();
-    }
-
     @NotNull
-    @Override
     public ServletSystemInformationCollector<?> getSystemInformationCollector() {
         return systemInformationCollector;
+    }
+
+    public void addApplicationContextValue(@NotNull String key, @NotNull Object value) {
+        applicationContext.put(key, value);
+    }
+
+    @Nullable
+    public <T> T getApplicationContextValue(@NotNull String key) {
+        return (T) applicationContext.get(key);
+    }
+
+    protected CloudBeaverInstanceServer createInstanceServer() throws IOException {
+        return new CloudBeaverInstanceServer();
     }
 }
