@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,13 +18,12 @@ package io.cloudbeaver.server.websockets;
 
 import io.cloudbeaver.model.session.WebHeadlessSession;
 import io.cloudbeaver.model.session.WebHttpRequestInfo;
-import io.cloudbeaver.server.HttpConstants;
 import io.cloudbeaver.server.WebAppSessionManager;
 import jakarta.servlet.http.HttpSession;
 import jakarta.websocket.HandshakeResponse;
 import jakarta.websocket.server.HandshakeRequest;
 import jakarta.websocket.server.ServerEndpointConfig;
-import org.eclipse.jetty.ee10.websocket.jakarta.server.internal.JakartaWebSocketCreator;
+import org.eclipse.jetty.ee11.websocket.jakarta.server.internal.JakartaWebSocketCreator;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
@@ -32,6 +31,7 @@ import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.security.exception.SMAccessTokenExpiredException;
 import org.jkiss.dbeaver.model.websocket.WSConstants;
 import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.HttpConstants;
 import org.jkiss.utils.WSClientUtils;
 
 import java.util.List;
@@ -88,7 +88,8 @@ public class CBWebSocketServerConfigurator extends ServerEndpointConfig.Configur
             throw new RuntimeException(e.getMessage(), e);
         }
         if (sec.getUserProperties().get(PROP_WEB_SESSION) == null) {
-            throw new RuntimeException("No web session found for websocket request");
+            // no throwing exception here. will be handled in onOpen
+            log.debug("No web session found for websocket request, connection will be closed on open");
         }
     }
 
@@ -96,8 +97,8 @@ public class CBWebSocketServerConfigurator extends ServerEndpointConfig.Configur
     private String getSessionId(@NotNull HandshakeRequest request) {
         // complex auth uses bearer authentication
         List<String> authHeaders = WSClientUtils.getHeaders(request.getHeaders(), HttpConstants.HEADER_AUTHORIZATION);
-        if (!CommonUtils.isEmpty(authHeaders) && authHeaders.get(0).startsWith("Bearer ")) {
-            return authHeaders.get(0).substring(7);
+        if (!CommonUtils.isEmpty(authHeaders) && authHeaders.getFirst().startsWith(HttpConstants.BEARER_PREFIX)) {
+            return authHeaders.getFirst().substring(7);
         }
         return request.getHttpSession() instanceof HttpSession httpSession ? httpSession.getId() : null;
     }
